--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,12 +1,29 @@
 source 'https://rubygems.org'
 
 gem 'pry'
-gem 'rack'
+# gem 'rack'
 gem 'rack-test'
 gem 'rspec'
-gem 'rack-cors'
-gem 'shotgun'
+gem 'rack-cors', '~> 1.0.0'
+# gem 'shotgun'
 gem "require_all"
 gem "activerecord", "~> 5.2"
-gem "sinatra-activerecord"
+# gem "sinatra-activerecord"
 gem "sqlite3"
+
+# gem 'pry'
+ gem 'rack', '1.6.13'
+ gem 'shotgun', '0.9.0'
+# gem 'rack-commonlogger'
+# gem 'rake'
+# # gem 'rack'
+# gem 'rack-test'
+# gem 'rspec'
+# gem 'rack-cors'
+# # gem 'shotgun'
+# gem "require_all"
+# gem "activerecord", "~> 5.2"
+# gem "sinatra-activerecord"
+# gem "sqlite3"
+# # gem "webrick", "~> 1.9"
+# gem 'webrick', '~> 1.7'
