--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,6 +1,8 @@
 source 'https://rubygems.org'
 
+
 gem 'pry'
+gem "rake"
 gem 'rack-test'
 gem 'rspec'
 gem 'rack-cors', '~> 1.0.0'
@@ -9,3 +11,9 @@ gem "activerecord", "~> 5.2"
 gem "sqlite3"
  gem 'rack', '1.6.13'
  gem 'shotgun', '0.9.0'
+
+
+
+gem "sinatra"
+gem "sinatra-activerecord"
+
